Fix legend text getting cut off

--- a/src/nyc_trees/sass/partials/_map.scss
+++ b/src/nyc_trees/sass/partials/_map.scss
@@ -127,6 +127,9 @@
 }
 
 @media (min-width: $screen-sm) {
+  .map-sidebar .modal-dialog {
+    width: auto;
+  }
   .location-search-container {
     top: 1rem;
     left: 35rem;
